# EECS376_HWs

./: CMakeLists.txt  README.md  package.xml
assignment_1/: CMakeLists.txt  package.xml
assignment_1/src/: lidar_alarm.cpp  minimal_controller.cpp
assignment_2/: CMakeLists.txt  package.xml
assignment_2/src/: lidar_alarm.cpp  reactive_commander.cpp
assignment_3/: CMakeLists.txt  package.xml
assignment_3/src/: path_client.cpp  path_service2.cpp
assignment_4/: CMakeLists.txt  package.xml
assignment_4/action/: move.action
assignment_4/src/: action_client.cpp  action_server.cpp  lidar_alarm.cpp
assignment_6/: CMakeLists.txt  README.md
assignment_6/src/: pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client.cpp  pub_des_state_path_client_3mx3m_sqr.cpp  traj_builder_example_main.cpp
assignment_7/: CMakeLists.txt  package.xml
assignment_7/src/: lin_steering_wrt_odom.cpp  pub_des_state.h  pub_des_state_main.cpp  steering_algorithm.h
assignment_8/: CMakeLists.txt  package.xml
assignment_8/include/assignment_8/: odom_tf.h  steering_algorithm.h
assignment_8/src/: lin_steering_wrt_odom.cpp  odom_tf.cpp  pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client.cpp  traj_builder.cpp
src/: reactive_commander.cpp
